--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
-  "id": "8e93dd11-073a-4119-8cb3-6a38ebe07300",
-  "name": "PVON REACT",
+  "id": "1c40b715-d937-4304-b474-e2cfd842da67",
+  "name": "Warehouse WS support MZLU projekt",
   "publisher": "Pavel Vondruška",
   "version": "1.0.0.0",
-  "brief": "PVON REACT",
-  "description": "PVON REACT",
+  "brief": "Warehouse WS support MZLU projekt",
+  "description": "Podpora warehouse MZLU projekt PVON",
   "privacyStatement": "https://essencebs.eu/en/privacy-policy",
   "EULA": "https://essencebs.eu/en/software-app-end-user-license-agreement",
   "help": "https://htmlpreview.github.io/?https://github.com/pavelvon76/mzlu_sandbox_javascript/blob/master/help.html",
