--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "id": "1c40b715-d937-4304-b474-e2cfd842da67",
-  "name": "Warehouse WS support MZLU projekt",
+  "name": "Warehouse Support MZLU projekt",
   "publisher": "Pavel Vondruška",
-  "version": "1.0.0.0",
+  "version": "20.0.0.2",
   "brief": "Warehouse WS support MZLU projekt",
   "description": "Podpora warehouse MZLU projekt PVON",
   "privacyStatement": "https://essencebs.eu/en/privacy-policy",
